[package]
name = "sasa"
version = "0.1.0"
edition = "2021"

[features]
default = ["cpal"]
cpal = ["dep:cpal"]
oboe = ["dep:oboe"]

[dependencies]
anyhow = "1.0.68"
cpal = { version = "0.14.2", optional = true }
ringbuf = "0.3.2"
symphonia = { version = "0.5.4", features = ["mp3", "aac", "wav", "flac", "vorbis", "alac"] }
thiserror = "1.0.38"
ffmpeg-next = { version = "6.0", features = ["build"] }

oboe = { version = "0.5.0", optional = true, features = ["shared-stdcxx"] }

[dev-dependencies]
kira = "0.7.1"

[package.metadata.ffmpeg]
version = "4.4"
lib_dir = "C:\\msys64\\mingw64\\lib"
include_dir = "C:\\msys64\\mingw64\\include"
